--- a/layout/_partial/post/jiathis.ejs
+++ b/layout/_partial/post/jiathis.ejs
@@ -1,21 +1,16 @@
 <% if (theme.jiathis.enable){ %>
+<!-- JiaThis Button BEGIN -->
 <div class="jiathis_style">
     <span class="jiathis_txt">分享到：</span>
-    <a class="jiathis_button_tsina">新浪微博</a>
+    <a class="jiathis_button_tsina">微博</a>
     <a class="jiathis_button_weixin">微信</a>
-    <a class="jiathis_button_twitter">Twitter</a>
-    <a class="jiathis_button_evernote">EverNote</a>
-    <a href="http://www.jiathis.com/share?uid=1501277" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+    <a class="jiathis_button_ydnote">有道云笔记</a>
+    <a href="http://www.jiathis.com/share?uid=1526871" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+    <a class="jiathis_counter_style"></a>
 </div>
-<script type="text/javascript" >
-    var jiathis_config={
-    data_track_clickback:true,
-    sm:"copy,renren,cqq",
-    pic:"<%- item.photos %>",
-    summary:"",
-    <% if (theme.jiathis.tsina){ %> ralateuid:{"tsina":"<%= theme.jiathis.tsina %>"},hideMore:false}
-    <% } %>
-  </script> 
-<script type="text/javascript" src="//v3.jiathis.com/code/jia.js?uid=
-<% if (theme.jiathis.id){ %><%= theme.jiathis.id %><% } %>" charset="utf-8"></script>      
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1526871" charset="utf-8"></script>
+<!-- JiaThis Button END -->     
 <% } %>
