--- a/layout/_partial/post/article.ejs
+++ b/layout/_partial/post/article.ejs
@@ -5,12 +5,16 @@
 		<%- partial('gallery') %>
 		<% if( table&&(item.toc !== false) && theme.toc.article){ %>
 		<div id="toc" class="toc-article">
-			<strong class="toc-title"><%= __('contents') %></strong>
-		<%- toc(item.content) %>
+			<strong class="toc-title"><%= __('contents') %></strong>			
+			<% if(item.list_number == false) {%>
+ 			<%- toc(item.content,{list_number:false}) %>
+ 			<% }else{ %>
+ 				<%- toc(item.content) %>
+ 			<% } %>
+			</div>
+			<% } %>
+			<%- item.content %>  
 		</div>
-		<% } %>
-		<%- item.content %>  
-	</div>
 		<%- partial('footer') %>   	       
 	</article>
 	<%- partial('pagination') %>
