--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -129,11 +129,19 @@
     margin-left 2% !important
   section.post
     width 100%
-    @media mini
+
+    time
+      font-size 1.1em !important
       float left
-      width 50%
-    @media tablet
-      width 33.333%
+      @media phonemax
+        width 100%
+      @media tablet
+        width 20%
+  /*  @media mini
+        float left
+        width 50%
+      @media tablet
+        width 33.333% */
 
 .archive-nav
   @media mini
