--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -39,7 +39,17 @@
         color color-font
         display block
         margin 0.5em 0
-        font-size 0.5em
+        font-size 0.9em
+
+      #archive-page
+        section.post
+         a
+           font-size 0.9em
+           padding 0.5em !important
+           time
+         
+              @media mini
+               padding-left 1em
 
 .moveMain
   margin-left 10% !important
